--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-cycler==0.10.0
-kiwisolver==1.3.1
-matplotlib==3.3.3
-numpy==1.19.4
-Pillow==8.2.0
-pyparsing==2.4.7
-python-dateutil==2.8.1
-six==1.15.0
+cycler==0.11.0
+fonttools==4.29.1
+kiwisolver==1.3.2
+matplotlib==3.5.1
+numpy==1.22.2
+packaging==21.3
+Pillow==9.0.1
+pyparsing==3.0.7
+python-dateutil==2.8.2
+six==1.16.0
